- Fixed: Addressed an issue where progress messages for specific modlist exports (PDF, JSON) would run even when their respective --no- flags were used.
- Fixed: Restructured the export logic to ensure command-line arguments are parsed only once and correctly passed to all export functions.

v2.2.0:
- Added: --force-update argument: Added a new command-line argument that forces a re-download and re-installation of all mods, even if their versions are already up to date. This is useful for repairing corrupted files or performing a clean install.
- Added: Update date and time are now displayed in updated_mods_changelog.txt
- Added: Added a new command-line argument (--install-mods) to download all mods listed in modlist.json to the designated mods folder.
- Fixed an issue where the warning message for an empty mods directory was not displaying the directory path correctly.
- Fixed: Exported JSON data now correctly lists installed mod's download URL. Previously, the installed_download_url could show the latest available version instead of the exact version you have installed. This has been corrected to ensure the exported data is accurate for all mods, regardless of their update status.
- Fixed and improved mod changelog retrieval. Mod changelog information is now fetched directly from the API.
- Fixed: Adapted API call for game version retrieval. The Vintage Story Mods API no longer prepends a 'v' to game version strings (e.g., v1.20.11 is now 1.20.11).
- Improved: Enhanced configuration file handling by explicitly specifying UTF-8 encoding for both reading and writing config.ini.

v2.1.3:
- Fixed: The download link for ModsUpdater was broken due to a character issue.
- Build System: Migrated the binary creation process from Nuitka to cx_Freeze. This change aims to improve build compatibility and simplify the packaging workflow.

v2.1.2: